<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E3E4E8"
    android:id="@+id/activity_show_neighbour_container"

    >

        <ImageButton
            android:id="@+id/activity_show_neighbour_return_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/transparent"
            android:elevation="@dimen/activity_horizontal_margin"
            android:tint="#FFFFFF"
            app:srcCompat="?attr/actionModeCloseDrawable"
            tools:srcCompat="?attr/actionModeCloseDrawable" />

        <ImageView
            android:id="@+id/activity_show_neighbour_portrait_img"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/activity_show_neighbour_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/activity_show_neighbour_return_ib"
            android:layout_marginTop="115dp"
            android:layout_marginHorizontal="15dp"/>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/activity_show_neighbour_favorite_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_show_neighbour_name_txt"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="#FFFFFF"
            app:backgroundTint="@color/cardview_light_background"
            app:srcCompat="@drawable/ic_star_border_white_24dp" />


        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/activity_show_neighbour_info_llc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_below="@+id/activity_show_neighbour_portrait_img"
            android:orientation="vertical"
            android:background="@drawable/shadow_bg"
            >

                <TextView
                    android:id="@+id/activity_show_neighbour_name_content_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_margin="15dp"
                    />

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/activity_show_neighbour_adress_image"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="@android:color/transparent"
                            android:tint="@color/colorAccent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            app:srcCompat="@drawable/ic_baseline_location_on_24" />

                        <TextView
                            android:id="@+id/activity_show_neighbour_adress_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_normal_size"
                            android:layout_margin="@dimen/activity_horizontal_margin"/>

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/activity_show_neighbour_phone_image"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="@android:color/transparent"
                            android:tint="@color/colorAccent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            app:srcCompat="@drawable/ic_baseline_local_phone_24"/>

                        <TextView
                            android:id="@+id/activity_show_neighbour_phone_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_normal_size"
                            android:layout_margin="@dimen/activity_horizontal_margin" />

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/activity_show_neighbour_facebook_image"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="@android:color/transparent"
                            android:tint="@color/colorAccent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            app:srcCompat="@drawable/ic_baseline_language_24" />

                        <TextView
                            android:id="@+id/activity_show_neighbour_facebook_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_normal_size"
                            android:layout_margin="16dp"/>

                </android.support.v7.widget.LinearLayoutCompat>


        </android.support.v7.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_below="@+id/activity_show_neighbour_info_llc"
            android:background="@drawable/shadow_bg"
            android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="A propos de moi"
                    android:textSize="@dimen/text_large_size"
                    android:textColor="#000000"
                    android:layout_margin="@dimen/activity_vertical_margin"/>

                <TextView
                    android:id="@+id/activity_show_neighbour_about_me_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"/>

        </LinearLayout>


</RelativeLayout>